--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
     "email": "email@email.com",
     "password": "password1",
-    "cid": "CID_028_Athena_Commando_F",
-    "bid": "BID_023_Pinkbear",
-    "eid": "EID_HotPink",
+    "cid": "CID_245_Athena_Commando_F_DurrburgerPjs",
+    "bid": "BID_002_RoyaleKnight",
+    "eid": "EID_RideThePonyTwo",
     "pickaxe_id": "Pickaxe_Lockjaw",
     "banner": "otherbanner28",
     "banner_colour": "defaultcolor15",
     "level": 999,
     "bp_tier": 999999999,
-    "status": "discord.gg/fnpy",
+    "status": "I love you!",
     "platform": "WIN",
     "debug": false,
     "friend_accept": true
